# vudo

./: .gitignore  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
src/: caller.rs  dialog.rs  icon.rs  linux.rs  macos.rs  main.rs  quote.rs  unix.rs  update.rs  win.rs
